accelerators-output/dekt4pets/api-grid/api-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-portal-server
spec:
  template:
    metadata:
      labels:
        app: api-portal-server
    spec:
      containers:
      - name: api-portal-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: scg-openapi
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec: 
  rules: 
    - host: scg-openapi.tanzu.dekt.io
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: scg-operator
              port:
                number: 80
